fixed alignment and font sizes with featured groups on home

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -757,12 +757,17 @@ button, #homebox-buttons button {
 .front .views-field-field-group-image-fid {
   float: left;
   width: 152px;
-  margin-top: 5px;
+  margin-top: 0px;
   margin-right: 10px;
 }
 
 .front div.views-field-title {
   font-weight: bold;
+}
+
+.view-homepage-group-showcase .views-field-title {
+  font-size: 16px;
+  margin-bottom: 8px;
 }
 
 /*cols-1 table on home page for groups */
